Trying to solve deadspace on right on small mobile

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -257,12 +257,14 @@ nav li a[data-current="current item"] {
 
 #menuToggle nav {
   transform: translatex(500px);
+  visibility: hidden;
   transition: 0.4s ease-in;
 }
 
 #menuToggle input:checked ~ nav
 {
   transform: translatex(0px);
+  visibility: visible;
   transition: 0.4s ease-out;
 }
 
